force-app/main/default/objects/CCXR_Table__c/fields/CCXR_Booked_Time__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Booked_Time__c</fullName>
    <label>CCXR_Booked Time</label>
    <type>DateTime</type>
</CustomField>