force-app/main/default/objects/CCXR_Table__c/fields/CCXR_Table_Image__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Table_Image__c</fullName>
    <label>CCXR_Table Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>