force-app/main/default/objects/CCXR_Table__c/fields/Table_Image__c.field-meta.xml
<CustomField>
    <fullName>Table_Image__c</fullName>
    <label>Table Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>