force-app/main/default/objects/CCXR_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Capacity__c</columns>
    <columns>CCXR_Table_Status__c</columns>
    <columns>CCXR_Table_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>